--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
-  <!-- HERO -->
+  <!-- HERO ESTILO CAPA -->
   <section class="hero" id="home" aria-label="Capa do Terceirão">
+
+    <!-- FUNDO (preenche a tela no mobile, desfocado) -->
+    <img src="img/Foto da Turma.jpg" alt="" class="hero-bg-blur" aria-hidden="true" />
+
+    <!-- FOTO PRINCIPAL -->
     <img src="img/Foto da Turma.jpg" alt="Foto da turma Terceirão B" class="hero-img" />
 
     <div class="hero-overlay"></div>
@@ -25,7 +30,6 @@
   </section>
 
   <main>
-
     <!-- SOBRE -->
     <section class="section" id="sobre">
       <div class="container">
@@ -51,19 +55,19 @@
       </div>
     </section>
 
-    <!-- MOMENTOS -->
+    <!-- MOMENTOS / GALERIA -->
     <section class="section alt" id="momentos">
       <div class="container">
         <h2>Momentos</h2>
         <p class="muted">Clique na foto pra abrir em tela cheia.</p>
 
         <div class="gallery">
-          <button class="photo" data-full="img/foto1.jpg">📸 Foto oficial</button>
-          <button class="photo" data-full="img/foto2.jpg">✨ Evento</button>
-          <button class="photo" data-full="img/foto3.jpg">🎉 Resenha</button>
-          <button class="photo" data-full="img/foto4.jpg">🏫 Escola</button>
-          <button class="photo" data-full="img/foto5.jpg">🚌 Passeio</button>
-          <button class="photo" data-full="img/foto6.jpg">🎓 Formatura</button>
+          <button class="photo" data-full="turma-hero.jpg">📸 Foto oficial</button>
+          <button class="photo" data-full="turma-hero.jpg">✨ Evento</button>
+          <button class="photo" data-full="turma-hero.jpg">🎉 Resenha</button>
+          <button class="photo" data-full="turma-hero.jpg">🏫 Escola</button>
+          <button class="photo" data-full="turma-hero.jpg">🚌 Passeio</button>
+          <button class="photo" data-full="turma-hero.jpg">🎓 Formatura</button>
         </div>
       </div>
     </section>
@@ -85,17 +89,17 @@
         <p class="muted">Coloque Insta, Drive e WhatsApp da turma.</p>
 
         <div class="grid">
-          <a class="card link" href="#" target="_blank">
+          <a class="card link" href="#" target="_blank" rel="noopener">
             <h3>📷 Instagram</h3>
             <p class="muted">@terceiraob</p>
           </a>
 
-          <a class="card link" href="#" target="_blank">
+          <a class="card link" href="#" target="_blank" rel="noopener">
             <h3>💬 WhatsApp</h3>
             <p class="muted">Link do grupo</p>
           </a>
 
-          <a class="card link" href="#" target="_blank">
+          <a class="card link" href="#" target="_blank" rel="noopener">
             <h3>📁 Drive</h3>
             <p class="muted">Materiais & fotos</p>
           </a>
@@ -106,22 +110,17 @@
         </footer>
       </div>
     </section>
-
   </main>
 
-  <!-- 🎵 MÚSICA DE FUNDO -->
+  <!-- MÚSICA (precisa de clique) -->
   <audio id="bg-music" loop preload="auto">
-    <source src="audio/velha infancia.mpeg" type="audio/mpeg">
-    Seu navegador não suporta áudio.
+    <source src="audio/velha infancia.mpeg" type="audio/mpeg" />
   </audio>
+  <button id="music-btn" class="music-btn" aria-label="Tocar música">🎵 Música</button>
 
-  <button id="music-btn" class="music-btn" aria-label="Tocar música">
-    🎵 Música
-  </button>
-
-  <!-- MODAL -->
-  <div class="modal" id="modal">
-    <button class="modal-close" id="modalClose">✕</button>
+  <!-- MODAL (ABRIR FOTO GRANDE) -->
+  <div class="modal" id="modal" aria-hidden="true">
+    <button class="modal-close" id="modalClose" aria-label="Fechar">✕</button>
     <img id="modalImg" alt="Foto ampliada" />
   </div>
 
